<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#bababa">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editing"
            android:textSize="40sp"
            android:layout_gravity="top|center_horizontal"/>

        <EditText
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:id="@+id/edit_customer_name"
            android:layout_gravity="start"
            android:hint="@string/add_customer_name"
            android:inputType="textPersonName"
            android:background="#FFFFFF"
            android:elevation="10dp"
            android:layout_margin="20dp"/>

        <EditText
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:id="@+id/edit_party_num"
            android:layout_gravity="start"
            android:hint="@string/add_party_num"
            android:inputType="number"
            android:background="#FFFFFF"
            android:elevation="10dp"
            android:layout_margin="20dp"/>

        <EditText
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:id="@+id/add_time_arrival"
            android:layout_gravity="start"
            android:hint="@string/edit_time_arrival"
            android:inputType="time"
            android:background="#FFFFFF"
            android:elevation="10dp"
            android:layout_margin="20dp"/>

        <RelativeLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/edit_seat_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|start"
                android:layout_margin="10dp"
                android:background="@drawable/round_button"
                android:text="Seat"
                android:textSize="20sp" />

            <Button
                android:id="@+id/edit_delete_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/edit_seat_button"
                android:background="@drawable/round_button"
                android:text="Delete"
                android:textSize="20sp" />

            <Button
                android:id="@+id/edit_done_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_margin="10dp"
                android:background="@drawable/round_button"
                android:text="Done"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>